Bug 897062 - Handle special clicks in e10s. r=felipe,smaug